eck/fleet.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm
  namespace: eck
spec:
  selector:
    agent.k8s.elastic.co/name: elastic-agent
  ports:
  - protocol: TCP
    port: 8200
